# postinfer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: .readthedocs.yaml  api.md  conf.py  index.md
src/postinfer/: _version.py
src/postinfer/report/: __init__.py  pdg.py
tests/: test_pdg.py  test_version.py
